# softwareprojekt_2

./: .gitignore  CMakeLists.txt  README.md  TAGS  run_cmake.sh
include/: developer.hpp  junior_developer.hpp  senior_developer.hpp
logos/: junior_logo.txt  junior_preferred_logo.txt  senior_logo.txt  senior_preferred_logo.txt
src/: developer.cpp  junior_developer.cpp  main.cpp  senior_developer.cpp
tests/: test_developer.cpp
